--- a/docs/scss/main.scss
+++ b/docs/scss/main.scss
@@ -352,6 +352,7 @@ body {
     //     display: inline-block;
     #show,
     #show2,
+    #showSSN,
     .years {
         position: absolute;
         top: 20px;
@@ -375,7 +376,7 @@ body {
     i {
         visibility: hidden;
         position: absolute;
-        top: 25%;
+        top: 22px;
         right: 10px;
     }
 
@@ -770,6 +771,12 @@ line-height: 19px;
 p{
     margin-bottom: 0px;
 }
+}
+
+.error--text{
+    display: inline-block;
+    max-width: 80%;
+    vertical-align: top;
 }
 
 
